# string_manipulation

./: .gitmodules  CMakeLists.txt  Makefile  README.md  fmt_wrapper.cpp
src/: fmt_wrapper.cpp  strmpl.cpp
